# thameswater

./: .gitignore  .pypirc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
thameswater/: thameswater.py
